syntax = "proto3";

package portscan;

service PortScanService {
  // ScanPorts scans the ports of a given ip address
  rpc ScanPorts(ScanPortsRequest) returns (ScanPortsResult);
}

message ScanPortsRequest {
  string ip = 1;
  string portRange = 2;
  int32 timeout = 200;
}

message ScanPortsResult {
  repeated ScanResult scanResults = 1;
}

message ScanResult {
  int32 port = 1;
  bool isOpen = 2;
}
