package main

import (
	"encoding/json"
	"flag"
	"fmt"
	"log"
	"net/http"

	"golang.org/x/net/context"

	"google.golang.org/grpc"
	"google.golang.org/grpc/grpclog"

	"github.com/gorilla/mux"
	"github.com/joeyroosing/pentest/pb/portscan"
)

const (
	defaultPort = "8080"
)

type service struct {
	serverName string
	portscan.PortScanServiceClient
}

func main() {
	var (
		port         = flag.String("port", "8080", "The server port")
		portScanAddr = flag.String("portscan", "portscan:8080", "The Auth server address in the format of host:port")
	)
	flag.Parse()

	conn, err := grpc.Dial(*portScanAddr, grpc.WithInsecure())
	if err != nil {
		grpclog.Fatalf("fail to dial: %v", err)
	}
	defer conn.Close()

	svc := service{
		serverName:            "api.v1",
		PortScanServiceClient: portscan.NewPortScanServiceClient(conn),
	}

	r := mux.NewRouter()
	r.HandleFunc("/scan", svc.ScanHandler).Methods("POST")
	log.Fatal(http.ListenAndServe(":"+*port, r))
}

func (s *service) ScanHandler(w http.ResponseWriter, r *http.Request) {
	fmt.Println("aight boysz!")

	w.Header().Set("Accept-encoding", "gzip, deflate")
	w.Header().Set("Content-Type", "application/json")

	decoder := json.NewDecoder(r.Body)

	var request portscan.ScanPortsRequest
	if err := decoder.Decode(&request); err != nil {
		fmt.Println("Decode failed", err.Error())
		http.Error(w, err.Error(), http.StatusInternalServerError)
		return
	}

	scanPortsChan := s.scanPorts(context.Background(), &request)
	scanPortsReply := <-scanPortsChan
	if err := scanPortsReply.err; err != nil {
		http.Error(w, err.Error(), http.StatusInternalServerError)
		return
	}

	//TODO add conversion to local struct without omitempty for bool
	// golang decided that false == empty, thus wont be send to client

	if scanPortsReply.result == nil {
		http.Error(w, "Something went wrong during the process, please try again.", http.StatusInternalServerError)
	}

	// encode JSON for rendering
	encoder := json.NewEncoder(w)
	if err := encoder.Encode(scanPortsReply.result.GetScanResults()); err != nil {
		http.Error(w, err.Error(), http.StatusInternalServerError)
		return
	}
}

func (s *service) scanPorts(ctx context.Context, request *portscan.ScanPortsRequest) chan scannedPortsResult {
	ch := make(chan scannedPortsResult, 1)

	go func() {
		req := request
		res, err := s.PortScanServiceClient.ScanPorts(ctx, req)
		ch <- scannedPortsResult{res, err}
	}()
	return ch
}

type scannedPortsResult struct {
	result *portscan.ScanPortsResult
	err    error
}
