package main

import (
	"testing"

	"github.com/joeyroosing/pentest/pb/portscan"
)

func TestPortScanSinglePort(t *testing.T) {
	request := &portscan.ScanPortsRequest{
		Ip: "<INSERT IP>",
		PortRange: "80",
		Timeout:   500,
	}

	svc := newService()
	res, err := svc.ScanPorts(nil, request)
	if err != nil {
		t.Fatal("Something went wrong while scanning.")
	}

	if len(res.ScanResults) == 0 {
		t.Fatal("Didn get ANY response")
	}

	port80Res := res.ScanResults[0]
	if !port80Res.IsOpen {
		t.Error("port should be open...")
	}
}

func TestPortScanMultiplePorts(t *testing.T) {
	request := &portscan.ScanPortsRequest{
		Ip: "<INSERT IP>",
		PortRange: "80,81,82,83",
		Timeout:   500,
	}

	svc := newService()
	res, err := svc.ScanPorts(nil, request)
	if err != nil {
		t.Fatal(err.Error())
	}

	if len(res.ScanResults) == 0 {
		t.Fatal("Didn get ANY response")
	}

	port80Res := res.ScanResults[0]
	if !port80Res.IsOpen {
		t.Errorf("port %d should be open...", port80Res.Port)
	}

	closedPort := res.ScanResults[1]
	if closedPort.IsOpen {
		t.Errorf("port %d should be closed...", closedPort.Port)
	}
}

func BenchmarkPortScan(b *testing.B) {
	request := &portscan.ScanPortsRequest{
		Ip: "<INSERT IP>",
		PortRange: "20,21,22,23,24,25,43,49,53,57,69,80,88,109,110,115,118,137,139,143,194,201,220,389,443,445,513,546,547,631,636,1194,1293,1812,8080",
		Timeout:   500,
	}

	svc := newService()

	for i := 0; i < b.N; i++ {
		svc.ScanPorts(nil, request)
	}
}
